# Cavvy

./: .gitattributes  .gitignore  .verinfo  Cargo.toml  README.md  README_EN.md  ROADMAP.md  cavvy.ebnf  eol.ebnf  test_examples.ps1
examples/: b.eol  billion.eol  hello.eol  include_helper.cay  include_nested_a.cay  include_nested_b.cay  include_nested_c.cay  include_pragma_helper.cay  multiplication.eol  multiplication_formatted.eol  multiplication_table_simple.eol  test_0_4_3_features.cay  test_0_4_3_simple.cay  test_access_control.cay  test_atmain_annotation.eol  test_atmain_conflict.eol  test_atmain_duplicate.eol  test_auto_inference.cay  test_calloc_integration.eol  test_do_while.eol  test_for_loop.eol  test_inc_dec.cay  test_inc_dec_simple.cay  test_include_basic.cay  test_include_nested.cay  test_include_pragma_once.cay  test_inheritance_basic.cay  test_instanceof.cay  test_memoization.eol  test_method_ref_and_lambda.eol  test_operators_long.eol  test_operators_working.eol  test_override_annotation.cay  test_pre_post_value.cay  test_static_array.eol  test_static_fields.eol  test_string.eol  test_string_concat.eol  test_switch.eol  test_type_casting_advanced.eol  (+4 more)
examples/errors/: error_cycle_a.cay  error_cycle_b.cay  error_cycle_c.cay  error_include_cycle.cay  error_inheritance_undefined_parent.cay  error_invalid_cast_array_to_int.eol  error_invalid_cast_string_to_int.eol  error_override_no_parent.cay  error_override_not_exist.cay  error_type_cast_overflow.eol
src/: ast.rs  error.rs  lib.rs  main.rs  types.rs
src/codegen/: mod.rs  (+7 more)
tests/: integration_tests.rs
(+43 files in other folders)
