[package]
name = "cavvy"
version = "0.4.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
logos = "0.15"

[[bin]]
name = "cayc"
path = "src/bin/cayc.rs"

[[bin]]
name = "cay-ir"
path = "src/bin/cay-ir.rs"

[[bin]]
name = "ir2exe"
path = "src/bin/ir2exe.rs"

[[bin]]
name = "cay-check"
path = "src/bin/cay-check.rs"
